some animation added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/theme.css" rel="stylesheet"/>
     <link href="css/style.min.css" rel="stylesheet"/>
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+
     <!-- Canonical SEO -->
     <link rel="canonical" href=""/>
     <!-- Social tags -->
@@ -71,7 +73,7 @@
             <div class="content-center mt-0">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-center text-sm-left">
+                        <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-center text-sm-left" >
                             <p class="h2 mt-3 mt-sm-0">We provide independent insurance agents with enterprise level insights</p>
                             <div class="buttons">
                             <a href="#" class="btn btn-round btn-info btn-lg btn-header ">
@@ -96,10 +98,10 @@
     <p class=" line-on-side mt-5"><span class="bg_blue text-white">Get access to the best product on the market</span></p>
     <div class="container">
         <div class="row py-2 py-sm-5">
-            <div class="col-6 col-md-3 "><img class="w-50" src="images/sutterhealth2x.png" alt=""></div>
-            <div class="col-6 col-md-3"><img class="w-50" src="images/Aetna.png" alt=""></div>
-            <div class="col-6 col-md-3"><img class="w-50" src="images/dignityhealth2x.png" alt=""></div>
-            <div class="col-6 col-md-3"><img class="w-50" src="images/unitedhealthcare2x.png" alt=""></div>
+            <div class="col-6 col-md-3 "><img class="w-50" src="images/sutterhealth2x.png" alt="" data-aos="fade-up" data-aos-duration="300"></div>
+            <div class="col-6 col-md-3"><img class="w-50" src="images/Aetna.png" alt="" data-aos="fade-up" data-aos-duration="400" ></div>
+            <div class="col-6 col-md-3"><img class="w-50" src="images/dignityhealth2x.png" alt="" data-aos="fade-up" data-aos-duration="500"></div>
+            <div class="col-6 col-md-3"><img class="w-50" src="images/unitedhealthcare2x.png" alt="" data-aos="fade-up" data-aos-duration="600" ></div>
         </div>
     </div>
         <div class="divider my-3 my-sm-5"></div>
@@ -111,7 +113,7 @@
 <div class="container pb-5">
     <div class="row equal">
         <div class="col-md-4 mb-4">
-            <div class="card card-pricing h-100 p-0 px-sm-4">
+            <div class="card card-pricing h-100 p-0 px-sm-4" data-aos="fade-up" data-aos-duration="800" data-aos-anchor-placement="top-center">
                 <div class="card-body">
                     <div class="p-5">
                         <img class="" src="images/1.png" alt="">
@@ -124,7 +126,7 @@
         </div>
 
         <div class="col-md-4 mb-4">
-            <div class="card card-pricing h-100 p-0 px-sm-4">
+            <div class="card card-pricing h-100 p-0 px-sm-4" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="top-center">
                 <div class="card-body">
                     <div class="p-5">
                         <img class="" src="images/2.png" alt="">
@@ -137,7 +139,7 @@
         </div>
 
         <div class="col-md-4 mb-4">
-            <div class="card card-pricing h-100 p-0 px-sm-4">
+            <div class="card card-pricing h-100 p-0 px-sm-4" data-aos="fade-up" data-aos-duration="1200" data-aos-anchor-placement="top-center">
                 <div class="card-body">
                     <div class="p-5">
                         <img class="" src="images/3.png" alt="">
@@ -154,7 +156,7 @@
 <div class="container py-5">
     <div class="row mt-5">
         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12 text-center text-sm-left">
-            <img src="images/block-1.png" alt="">
+            <img src="images/block-1.png" alt=""  data-aos="zoom-in" data-aos-duration="800" data-aos-anchor-placement="top-center">
         </div>
         <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-center text-sm-left">
 
@@ -180,7 +182,7 @@
 
         </div>
         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12 text-center text-sm-right order-first order-sm-last">
-            <img src="images/block-2.png" alt="">
+            <img src="images/block-2.png" alt="" data-aos="zoom-in-down" data-aos-duration="800" data-aos-anchor-placement="top-center">
         </div>
 
 
@@ -190,7 +192,7 @@
 <div class="container py-5">
     <div class="row my-5">
         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12 text-center text-sm-left">
-            <img src="images/block-3.png" alt="">
+            <img src="images/block-3.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-anchor-placement="top-center">
         </div>
         <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-center text-sm-left">
             <h2 class="mt-0 mt-sm-5 pt-5 pt-md-0">Carrier Information For Your Customers</h2>
@@ -211,7 +213,7 @@
         <div class="container text-center">
         <div class="row">
             <div class="col-md-6 offset-md-3 text-center">
-                <h3 class="theme_color text-heavy ">Want More Information ?</h3>
+                <h3 class="theme_color text-heavy" data-aos="fade-up" data-aos-duration="800">Want More Information ?</h3>
                 <p class="text-muted">We provide independent insurance agents with agents with enterprise level insight insurance agents with enterprise level insight</p>
                 <div class="input-group mt-5 w-75 d-inline-flex">
                     <input type="text" class="form-control bg-white form-control-info p-3" placeholder="Enter e-mail Address">
@@ -230,7 +232,7 @@
     <div class="footer__content container">
         <div class="row">
             <div class="col-md-4 offset-md-4">
-                <img src="images/logo.png" class="w-w mt-5" alt="">
+                <img src="images/logo.png" class="w-w mt-5" alt="" data-aos="zoom-in-up" data-aos-duration="800" >
                 <p class="mt-4 text-white">We insights We provide independent insurance agents with enterprise level insight</p>
 
             </div>
@@ -246,5 +248,10 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 <script src="js/script.js"></script>
+<script>
+  AOS.init();
+</script>
+
 </html>
